--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">Fiilismittari</string>
-    <string name="k_ytt_j_profiili" translatable="false">Käyttäjäprofiili</string>
+    <string name="k_ytt_j_profiili">Käyttäjäprofiili</string>
     <string name="put_your_name_here">name</string>
     <string name="user">Käyttäjä:</string>
-    <string name="ok">ok</string>
+    <string name="okButton">ok</string>
+    <string name="remember_me" translatable="false">Muista minut</string>
 </resources>
